@@ -7,6 +7,10 @@ cfengine3 (3.0.4+dfsg-1) unstable; urgency=low
    * debian/patches:
       + all patches refreshed
       + rename-doesnt-fail: removed, it is incorporated upstream
+  * Switch to dpkg-source 3.0 (quilt) format
+      + debian/control: removed quilt from B-D
+      + debian/rules: removed patch/unpatch and quilt include
+      + debian/README.source removed
 
  -- Antonio Radici <antonio@debian.org>  Fri, 30 Apr 2010 08:11:20 +0100
 
